Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-6182

QListWidget itemActivated does not follow S60 conventions

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • 4.6.2
    • 4.6.0
    • GUI: Look'n'Feel
    • None
    • 9bb9991b7c6182249cbf922e4718e1c64e3c6433

      The problem is that on touch phones Symbian lists work like this:

      • If you do a single click on the current item, it is activated
      • If you do a single click on non the current item, the current item is changed but not activated

      Qt should work like this

      This is in 4.6 beta1 did not try in 4.6 RC1 because it makes our app unusable due to other bugs.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            samimeri Sami Merila (Inactive)
            tsdgeos Albert Astals Cid
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes