QListWidget itemActivated does not follow S60 conventions

Set StyleHint SH_ItemView_ActivateItemOnSingleClick inactive for 3.x
and 5th edition S60.

Task-number: QTBUG-6182
Reviewed-by: Alessandro Portale
(cherry picked from commit 9bb9991b7c6182249cbf922e4718e1c64e3c6433)